<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoTask">

    <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ocraextended"
        android:text="@string/do_first"
        android:textAlignment="center"
        android:textColor="@color/doNow_color"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ocraextended"
        android:text="@string/do_now_slogan"
        android:textAlignment="center"
        android:textColor="@color/doNow_color"
        android:textSize="29sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity=""
        android:layout_weight="3">

        <LinearLayout
            android:id="@+id/fragmentListLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:background="@drawable/fragment_background"
            android:backgroundTint="@color/doNow_color"
            android:orientation="vertical"
            android:paddingStart="35dp"
            android:paddingTop="50dp"
            android:paddingEnd="35dp" />


        <ImageButton
            android:id="@+id/navigateBack"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/navigate_button"
            android:contentDescription="@string/navigateBeforeButton"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_navigate_before_64"
            app:borderWidth="0dp" />

        <ImageButton
            android:id="@+id/navigateNext"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:background="@drawable/navigate_button"
            android:contentDescription="@string/navigatenextbutton"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_navigate_next_64"
            app:borderWidth="0dp" />

    </RelativeLayout>

</LinearLayout>